src/components/AppHeader/AppHeader.module.css
/*------------------------------------*\
    # APP HEADER
\*------------------------------------*/


/**
 * AppHeader
 */
.app-header {
  --app-header-shadow: var(--eds-box-shadow-md);

  /* This component is hard-coded to use the light color scheme in all cases */
  color-scheme: light;
  
  & > div {
    box-shadow: var(--app-header-shadow);
    height: 100%;
  }
}

.app-header--style-docked {
  & > div { 
    margin: 0;
  }
}

.app-header--style-floating {
  & > div {
    box-shadow: var(--app-header-shadow);
    border-radius: calc(var(--eds-theme-border-radius-surfaces-lg) * 1px);
  }
}

.app-header--orientation-horizontal {
  min-height: calc(var(--eds-spacing-size-12) * 1px);
  width: 100%;
  
  & > div {    
    padding: calc(var(--eds-spacing-size-2) * 1px)
      calc(var(--eds-spacing-size-3) * 1px);
  }

  &.app-header--style-floating > div {
    margin: calc(var(--eds-spacing-size-3) * 1px);
    margin-bottom: 0;
  }
  
  /* Mobile first: hide nav groups unless at least minimum width */
  .app-header__nav-groups {
    display: none;
    
    @media (min-width: $eds-bp-md) {
      display: flex;
    }
  }

  .app-header__content {
    flex-direction: row;
    max-width: 1320px;
    /* add in a bit of left/right padding to prevent outline from being cut off */
    padding: 0 2px;
    
    @media (min-width: $eds-bp-lg) {
      margin: 0 auto;
    }
  }
}

.app-header--orientation-vertical {
  width: 240px;
  height: 100vh;

  &.app-header--style-floating {
    /* remove the outer margins from the height when floating */
    height: calc(100vh - (calc(var(--eds-spacing-size-6) * 1px)));
  }

  & > div {
    padding: calc(var(--eds-spacing-size-3) * 1px) calc(var(--eds-spacing-size-1) * 1px) calc(var(--eds-spacing-size-4) * 1px) calc(var(--eds-spacing-size-1) * 1px);
  }

  &.app-header--style-floating > div {
    margin: calc(var(--eds-spacing-size-2) * 1px);
    margin-right: 0;
    padding: calc(var(--eds-spacing-size-3) * 1px) calc(var(--eds-spacing-size-1) * 1px) calc(var(--eds-spacing-size-4) * 1px) calc(var(--eds-spacing-size-1) * 1px);
  }

  .app-header__content {
    align-items: flex-end;
    flex-direction: column;
    height: 100%;
  }

  .app-header__nav-group ul {
    gap: 0;
  }

  /* nav trees */
  .drawer-content__header-container {
    padding-top: calc(var(--eds-spacing-size-3) * 1px);
  }
 }

.app-header__home-link:focus-visible {
  outline: none;

  .app-header-title__title {
    box-shadow: inset 0 0 0 2px light-dark(var(--eds-theme-color-border-utility-focus), var(--eds-dark-theme-color-border-utility-focus));
  }
}

.app-header__content {
  display: flex;
  
  gap: calc(var(--eds-spacing-size-5) * 1px);
  align-items: center;
  overflow: hidden;
}

.app-header__menu {
  display: inline-block;

  /* Mobile-first: hide this at bigger viewports */
  @media (min-width: $eds-bp-md) {
    display: none;
  }
}

.app-header__drawer {
  position: absolute;

  /* TODO: should this handle popover not closing when switching responsive sizes? */
  /* TODO: should this handle popover transition so that the positioning offset is not too obvious? */
  &:popover-open {
    height: 100%;
    position: fixed;
    padding: 0;
    inset: unset;
    overflow: hidden;
    top: 0;
    right: 0;
    margin: 0;
    box-shadow: var(--app-header-shadow);

    /* Mobile-first: hide this at bigger viewports */
    padding-top: calc(var(--eds-spacing-size-3) * 1px);
    padding-right: calc(var(--eds-spacing-size-3) * 1px);
    padding-bottom: calc(var(--eds-spacing-size-6) * 1px);
    padding-left: calc(var(--eds-spacing-size-3) * 1px);
    width: 100%;

    @media (min-width: $eds-bp-md) {
      width: 460px;
    }
  }
}

.app-header__drawer-button {
  display: flex;
  flex-direction: row-reverse;

  .app-header__drawer-button-instance {
    color: light-dark(var(--eds-theme-color-text-app-header-primary), var(--eds-dark-theme-color-text-app-header-primary));
  }
}

/**
 * AppHeader Navigation Items
 */
.app-header__nav-item {
  display: inline-flex;
  align-items: center;
  gap: calc(var(--eds-spacing-size-half) * 1px);

  padding: calc(var(--eds-spacing-size-1) * 1px)
    calc(var(--eds-spacing-size-1) * 1px);
  border-radius: calc(var(--eds-theme-border-radius-objects-md) * 1px);

  .app-header--orientation-vertical & {
    width: 100%;
  }

  transition: box-shadow ease-in-out calc(var(--eds-anim-fade-quick) * 1s);

  color: light-dark(var(--eds-theme-color-text-app-header-primary), var(--eds-dark-theme-color-text-app-header-primary));
}

.app-header__nav-item--link,
.app-header__nav-item--button {
  display: flex;
  gap: calc(var(--eds-spacing-size-1) * 1px);
  align-items: center;
  justify-content: space-between;
}

.app-header__nav-items {
  min-width: calc(var(--eds-spacing-size-20) * 1px);
}

.app-header__nav-items--absolute {
  position: absolute;
  bottom: 0;
  width: 100%;
}

.app-header__nav-item--icon-layout-left {
  flex-direction: row-reverse;
}

.app-header__nav-item--icon-layout-right {
  flex-direction: row;
}

.app-header__nav-groups {
  flex: 0 0 auto;
  gap: calc(var(--eds-spacing-size-7) * 1px);
}

.app-header__nav-group {
  margin: 0;
  padding: 0;
  list-style: none;

  ul {
    display: flex;
    gap: calc(var(--eds-spacing-size-1) * 1px);
  }
}

.app-header__menu-trigger {
  flex-direction: row-reverse;
}

/**
 * AppHeader title component and its sub-components
 */
.app-header-title {
  flex: 1 0 auto;

  .app-header--orientation-vertical & {
    flex-grow: 0;
    padding: 0 calc(var(--eds-spacing-size-1) * 1px) calc(var(--eds-spacing-size-1) * 1px);
    width: 100%;
  }

  .app-header-title--has-logo {
    max-height: calc(var(--eds-spacing-size-4-and-half) * 1px);

    /* make sure all logo images take their max heights from the container */
    & > img, & > svg {
      max-height: inherit;
    }
  }

  .app-header-title__sub-title {
    margin-top: calc(var(--eds-spacing-size-half) * 1px);
  }
}

/**
 * Styles for the drawer component and its sub-components
 */
.drawer-content {
  display: flex;
  flex-direction: column;

  height: calc(100% - (var(--eds-spacing-size-6) * 1px));
  width: 100%;

  .app-header__nav-item {
    width: 100%;
  }
}

.drawer-content__nav-group {
  flex: 0 0 auto;
}

.drawer-content__nav-group:nth-last-child(2) {
  flex-grow: 1;
}

.drawer-content__nav-group-item {
  list-style: none;
}

.drawer-content__nav-group-item--type-separator {
  pointer-events: none;
  padding: calc(var(--eds-spacing-size-1) * 1px) 0;
  margin: calc(var(--eds-spacing-size-1) * 1px) 0;
}

.drawer-content__header-container {
  font-family: var(--eds-typography-font-family-3);
  margin-bottom: calc(var(--eds-spacing-size-half) * 1px);
  display: flex;
  padding: 0 calc(var(--eds-spacing-size-1) * 1px);
}

/**
 * Component Theme Colors
 */
.app-header-title__title {
  color: light-dark(var(--eds-theme-color-text-app-header-primary), var(--eds-dark-theme-color-text-app-header-primary));
}

.app-header-title__sub-title {
  color: light-dark(var(--eds-theme-color-text-app-header-secondary), var(--eds-dark-theme-color-text-app-header-secondary));
}

.app-header_nav-item-label {
  color: light-dark(var(--eds-theme-color-text-app-header-secondary), var(--eds-dark-theme-color-text-app-header-secondary));
}

.app-header__nav-item--is-current {
  background-color: light-dark(var(--eds-theme-color-background-app-header-hover), var(--eds-dark-theme-color-background-app-header-hover));
}

.app-header__nav-item:focus-visible {
  box-shadow: inset 0 0 0 2px light-dark(var(--eds-theme-color-border-utility-focus), var(--eds-dark-theme-color-border-utility-focus));
  outline: none;
}

.drawer-content__nav-group-item--type-menu {
  color: light-dark(var(--eds-theme-color-text-app-header-secondary), var(--eds-dark-theme-color-text-app-header-secondary));
}

.app-header__nav-item:hover {
  background-color: light-dark(var(--eds-theme-color-background-app-header-hover), var(--eds-dark-theme-color-background-app-header-hover));
}

.app-header__nav-item:active {
  background-color: light-dark(var(--eds-theme-color-background-app-header-active), var(--eds-dark-theme-color-background-app-header-active));
}

.app-header--style-docked, .app-header--style-floating {
  &.app-header > div {
    background-color: light-dark(var(--eds-theme-color-background-app-header), var(--eds-dark-theme-color-background-app-header));
  }

  .app-header__nav-item--separator {
    border-color: light-dark(var(--eds-theme-color-border-app-header-separator), var(--eds-dark-theme-color-border-app-header-separator));
  }

  &.app-header__drawer {
    background-color: light-dark(var(--eds-theme-color-background-app-header), var(--eds-dark-theme-color-background-app-header));
  }
}

.app-header__drawer::backdrop {
  background-color: light-dark(var(--eds-theme-color-background-utility-overlay-low-emphasis), var(--eds-dark-theme-color-background-utility-overlay-low-emphasis));
  pointer-events: none;
}

